@@ -1,0 +1,16 @@
+# Test stdout of `log_warning' when $terminal_output=no & $logfile is unset.
+
+_testing="libprometheus/log_warning"
+_description="stdout, no terminal + no file"
+_expect=pass
+
+function _check {
+	source "$_lib" || exit 1
+
+	terminal_output=no
+	logfile=
+	setup_logging
+
+	local out="$(log_warning "five     spaces")"
+	[[ -z "$out" ]]
+}
