@@ -1,0 +1,17 @@
+# Test stderr of `log_warning' when $terminal_output=no & $logfile=output.log.
+
+_testing="libprometheus/log_warning"
+_description="stderr, no terminal + file"
+_expect=pass
+
+function _check {
+	source "$_lib" || exit 1
+
+	terminal_output=no
+	logfile="output.log"
+	> "$logfile"
+	setup_logging
+
+	log_warning "five     spaces" 2> output.txt
+	diff logfile.txt output.txt
+}
