@@ -1,0 +1,17 @@
+# Test stdout of `log_warning' when $terminal_output=no & $logfile=output.log.
+
+_testing="libprometheus/log_warning"
+_description="stdout, no terminal + file"
+_expect=pass
+
+function _check {
+	source "$_lib" || exit 1
+
+	terminal_output=no
+	logfile="output.log"
+	> "$logfile"
+	setup_logging
+
+	local out="$(log_warning "five     spaces")"
+	[[ -z "$out" ]]
+}
