@@ -1,0 +1,16 @@
+# Test stderr of `log_warning' when $terminal_output=yes & $logfile is unset.
+
+_testing="libprometheus/log_warning"
+_description="stderr, terminal + no file"
+_expect=pass
+
+function _check {
+	source "$_lib" || exit 1
+
+	terminal_output=yes
+	logfile=
+	setup_logging
+
+	log_warning "five     spaces" 2> output.txt
+	diff logfile.txt output.txt
+}
