@@ -1,0 +1,18 @@
+# Test log output from `log_warning' when $terminal_output=yes &
+# $logfile=output.log.
+
+_testing="libprometheus/log_warning"
+_description="log, terminal + file"
+_expect=pass
+
+function _check {
+	source "$_lib" || exit 1
+
+	terminal_output=yes
+	logfile="output.log"
+	> "$logfile"
+	setup_logging
+
+	log_warning "five     spaces"
+	diff logfile.txt "$logfile"
+}
