@@ -1,0 +1,17 @@
+# Test stderr of `log_warning' when $terminal_output=yes & $logfile=output.log.
+
+_testing="libprometheus/log_warning"
+_description="stderr, terminal + file"
+_expect=pass
+
+function _check {
+	source "$_lib" || exit 1
+
+	terminal_output=yes
+	logfile="output.log"
+	> "$logfile"
+	setup_logging
+
+	local out="$(log_warning "five     spaces" 2>&1 1> /dev/null)"
+	[[ -z "$out" ]]
+}
