@@ -6,6 +6,10 @@
 	  tyly_stderr, logfile.txt, tyly_log, tyln_stdout, tyln_stderr,
 	  tnly_stdout, tnly_stderr, tnly_log, tnln_stdout & tnln_stderr.
 
+	* testsuite/libprometheus/log_warning: Added README, tyly_stdout,
+	  tyly_stderr, logfile.txt, tyly_log, tyln_stdout, tyln_stderr,
+	  tnly_stdout, tnly_stderr, tnly_log, tnln_stdout & tnln_stderr.
+
 2004-09-16 Gareth Jones <gareth_jones@users.berlios.de>
 
 	* scripts/libprometheus.bash.in (logged_failure): Added logging &
